<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/filter_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/fleet_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/fleet_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/fleet_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/all"
            android:checked="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/fleet_pooling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:text="@string/pooling"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/fleet_taxi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:textColor="@color/blue"
            android:buttonTint="@color/primary"
            android:text="@string/taxi"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
    </RadioGroup>
    <TextView
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/heading_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/direction_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:prompt="@string/heading_direction"
        android:spinnerMode="dialog"
        android:entries="@array/heading_directions" />
</LinearLayout>