...
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="Hamburg" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/filter_fab"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        app:fabSize="mini"
        app:backgroundTint="@color/secondary"
        android:src="@drawable/ic_filter_list_24dp"
...
        android:padding="8dp"
        android:id="@+id/filter_chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vehicles_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter_chipGroup"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="-13dp"
...
